--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "build": "yarn run sync-lists && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && yarn run add-cname",
     "deploy": "gh-pages -d build",
-    "sync-lists": "node scripts/sync-lists.js"
+    "sync-lists": "node scripts/sync-lists.js",
+    "add-cname": "echo \"mentors.codingcoach.io\" >> build/CNAME"
   },
   "eslintConfig": {
     "extends": "react-app"
