sync my fork (#1)
* Increase mentor description limit (#4)

* Update mentors.json.spec.js

* update readme

* Update README.md

* Update README.md

* move cname to public
https://github.com/facebook/create-react-app/blob/817ecb1bb6b32b90fd0b064cd457ee0d05a9e5ae/docusaurus/docs/deployment.md#step-5-optionally-configure-the-domain

* reorganize files

* Implement new design
* allow to like mentor

* shuffle mentors and social links

* Use component

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "react": "^16.7.0",
@@ -17,10 +18,9 @@
     "build": "yarn run sync-lists && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build && yarn run add-cname",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "sync-lists": "node scripts/sync-lists.js",
-    "add-cname": "echo \"mentors.codingcoach.io\" >> build/CNAME"
+    "sync-lists": "node scripts/sync-lists.js"
   },
   "eslintConfig": {
     "extends": "react-app"
