--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "add-user": "node scripts/add-user.js"
+    "add-user": "node scripts/add-mentor.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,9 +33,11 @@
   ],
   "devDependencies": {
     "ajv": "^6.8.1",
+    "execa": "^1.0.0",
     "gh-pages": "^2.0.1",
     "inquirer": "^6.2.2",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "ora": "^3.2.0"
   },
   "homepage": "https://mentors.codingcoach.io",
   "license": "MIT"
