--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^16.7.0",
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-scripts": "2.1.3",
-    "semantic-ui-react": "^0.84.0"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
