--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
     "react-scripts": "2.1.3",
-    "semantic-ui-react": "^0.84.0"
+    "semantic-ui-react": "^0.84.0",
+    "prop-types": "^15.7.2",
+    "remark": "^10.0.1",
+    "remark-react": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "sync-lists": "node scripts/sync-lists.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,7 +37,9 @@
   "devDependencies": {
     "ajv": "^6.8.1",
     "gh-pages": "^2.0.1",
-    "nodemon": "^1.18.9"
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
+    "style-loader": "^0.23.1"
   },
   "homepage": "https://mentors.codingcoach.io",
   "license": "MIT"
