--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "react": "^16.7.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.7.0",
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
