--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
     "react-scripts": "2.1.3",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "svg-country-flags": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
