--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gh-pages": "^2.0.1",
     "inquirer": "^6.2.2",
     "nodemon": "^1.18.9",
+    "object-path": "^0.11.4",
     "ora": "^3.2.0"
   },
   "homepage": "https://mentors.codingcoach.io",
