--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
     "react-scripts": "2.1.3",
+    "react-obfuscate": "3.3.1",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
