--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "express": "^4.16.4",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.7.0",
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-scripts": "2.1.3",
     "react-obfuscate": "3.3.1",
+    "react-scripts": "2.1.3",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
