--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-dom": "^16.7.0",
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-scripts": "2.1.3",
     "react-obfuscate": "3.3.1",
+    "react-scripts": "2.1.3",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
@@ -43,6 +43,7 @@
     "nodemon": "^1.18.9",
     "object-path": "^0.11.4",
     "ora": "^3.2.0",
+    "image-type": "^4.0.0",
     "prettier": "1.16.4"
   },
   "homepage": "https://mentors.codingcoach.io",
