--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "classnames": "^2.2.6",
     "express": "^4.16.4",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "inquirer-checkbox-plus-prompt": "^1.0.1",
+    "iso-639-1": "^2.0.5",
     "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-aria-offcanvas": "^1.1.10",
