--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "devDependencies": {
     "ajv": "^6.8.1",
+    "cypress": "^3.2.0",
     "execa": "^1.0.0",
     "gh-pages": "^2.0.1",
     "image-type": "^4.0.0",
