--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "ajv": "^6.8.1",
     "cypress": "^3.2.0",
+    "cypress-testing-library": "^3.0.1",
     "execa": "^1.0.0",
     "gh-pages": "^2.0.1",
     "image-type": "^4.0.0",
