hook local and CI runners for cypress

--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "node scripts/pre-build.js && react-scripts build",
-    "test": "yarn prettier:fix && react-scripts test",
+    "test": "yarn prettier:fix && react-scripts test && yarn test:e2e:run",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "add-user": "node scripts/add-mentor.js",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
-    "prettier:fix": "prettier \"**/*.{json,js}\" --write"
+    "prettier:fix": "prettier \"**/*.{json,js}\" --write",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
+    "pretest:e2e:run": "npm run build",
+    "test:e2e:run": "start-server-and-test start http://localhost:3000 cy:run",
+    "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,10 +53,12 @@
     "gh-pages": "^2.0.1",
     "image-type": "^4.0.0",
     "inquirer": "^6.2.2",
+    "is-ci-cli": "^1.1.1",
     "nodemon": "^1.18.9",
     "object-path": "^0.11.4",
     "ora": "^3.2.0",
-    "prettier": "1.16.4"
+    "prettier": "1.16.4",
+    "start-server-and-test": "^1.9.0"
   },
   "homepage": "https://mentors.codingcoach.io",
   "license": "MIT"
