--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
+install:
+- npm ci
 node_js:
   - v11.6.0
 cache:
   directories:
-  - node_modules
+  - "$HOME/.npm"
 script:
   - npm test
   - npm run predeploy
