basic login logout

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.10.3",
     "classnames": "^2.2.6",
     "express": "^4.16.4",
     "inquirer-autocomplete-prompt": "^1.0.1",
