--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
   ],
   "devDependencies": {
     "ajv": "^6.8.1",
+    "cors": "^2.8.5",
     "execa": "^1.0.0",
     "gh-pages": "^2.0.1",
     "image-type": "^4.0.0",
     "inquirer": "^6.2.2",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.18.9",
     "object-path": "^0.11.4",
     "ora": "^3.2.0",
