--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:all": "npm-run-all --parallel start start:server",
+    "start:server": "nodemon server.js",
     "build": "node scripts/pre-build.js && react-scripts build",
     "test": "yarn prettier:fix && react-scripts test",
     "eject": "react-scripts eject",
@@ -49,6 +51,7 @@
     "inquirer": "^6.2.2",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
     "object-path": "^0.11.4",
     "ora": "^3.2.0",
     "prettier": "1.16.4"
