--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-obfuscate": "3.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^3.0.3",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
@@ -57,8 +58,8 @@
     "gh-pages": "^2.0.1",
     "image-type": "^4.0.0",
     "inquirer": "^6.2.2",
-    "node-fetch": "^2.6.0",
     "is-ci-cli": "^1.1.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "object-path": "^0.11.4",
