--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ cache:
 script:
   - yarn test
   - yarn predeploy
+env:
+  - PUBLIC_URL=https://mentors.codingcoach.io
+  - NODE_ENV=production
 deploy:
   provider: pages
   skip_cleanup: true
