--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,9 @@ cache:
   - "$HOME/.yarn-cache"
 script:
   - yarn test
-  - yarn predeploy
+  - NODE_ENV=production yarn predeploy
 env:
-  - PUBLIC_URL=https://mentors.codingcoach.io NODE_ENV=production
-
+  - PUBLIC_URL=https://mentors.codingcoach.io 
 deploy:
   provider: pages
   skip_cleanup: true
