try to add cache cypress 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 cache:
   yarn: true
   directories:
-    - "$HOME/.yarn-cache"
+    - node_modules
     - /home/travis/.cache/Cypress
 script:
   - yarn test
