--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.7.0",
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-lazyload": "^2.6.2",
     "react-obfuscate": "3.3.1",
     "react-scripts": "2.1.3",
     "svg-country-flags": "^1.2.6"
