Revert "Merge remote-tracking branch 'upstream/master' into header-ui"
This reverts commit 09c8bd1f4f8ae0a1a2b2279bc4991a39e05ffcdb, reversing
changes made to f0851fa9a4f23a54a9c15212cb039c1960ba5644.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,9 @@ node_js:
 cache:
   directories:
   - "$HOME/.yarn-cache"
-  - "$HOME/travis/.cache/Cypress"
 script:
-  - cypress install
   - yarn test
-  - NODE_ENV=production yarn predeploy
-env:
-  - PUBLIC_URL=https://mentors.codingcoach.io
+  - yarn predeploy
 deploy:
   provider: pages
   skip_cleanup: true
