--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "iso-639-1": "^2.0.5",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-aria-offcanvas": "^1.2.1",
     "react-autocomplete": "^1.8.1",
@@ -64,8 +64,9 @@
     "npm-run-all": "^4.1.5",
     "object-path": "^0.11.4",
     "ora": "^3.2.0",
-    "prettier": "1.18.2",
+    "prettier": "1.16.4",
     "start-server-and-test": "^1.9.0"
   },
+  "homepage": "https://mentors.codingcoach.io",
   "license": "MIT"
 }
