--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "iso-639-1": "^2.0.5",
     "lodash": "^4.17.11",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-aria-offcanvas": "^1.2.1",
     "react-autocomplete": "^1.8.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
     "react-obfuscate": "3.3.1",
+    "react-onclickoutside": "^6.8.0",
     "react-scripts": "2.1.3",
     "react-select": "^3.0.3",
+    "styled-components": "^5.0.0-beta.8",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
