--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ REACT_APP_GA=UA-133820299-1
 
 REACT_APP_AUTH_DOMAIN=codingcoach.eu.auth0.com
 REACT_APP_AUTH_CLIENT_ID=v6QIkx65SRzIUN91JuTRQ0nC4t1veOLQ
-REACT_APP_AUTH_CALLBACK=http://localhost:3000/app/dashboard
+REACT_APP_AUTH_CALLBACK=http://localhost:3000/
