--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-onclickoutside": "^6.8.0",
     "react-scripts": "2.1.3",
     "react-select": "^3.0.3",
+    "react-toastify": "^5.3.2",
     "styled-components": "^5.0.0-beta.8",
     "svg-country-flags": "^1.2.6"
   },
