try to fix cypress again 1

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 cache:
   directories:
   - "$HOME/.yarn-cache"
-  - "$HOME/travis/.cache/Cypress"
+  - ~/.cache
 script:
   - cypress install
   - yarn test
