--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
 cache:
   directories:
   - "$HOME/.yarn-cache"
+  - "$HOME/travis/.cache/Cypress"
 script:
   - cypress install
   - yarn test
