--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ script:
   - cypress install
   - yarn test
   - NODE_ENV=production yarn predeploy
+addons:
+  apt:
+    packages:
+    - libgconf-2-4
 env:
   - PUBLIC_URL=https://mentors.codingcoach.io
 deploy:
