--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "add-user": "node scripts/add-mentor.js",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
     "prettier:fix": "prettier \"**/*.{json,js}\" --write",
     "cy:run": "cypress run",
@@ -61,6 +60,7 @@
     "image-type": "^4.0.0",
     "inquirer": "^6.2.2",
     "is-ci-cli": "^1.1.1",
+    "nock": "^10.0.6",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
