--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.11.1",
     "classnames": "^2.2.6",
     "express": "^4.16.4",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "iso-639-1": "^2.0.5",
     "lodash": "^4.17.13",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-aria-offcanvas": "^1.2.1",
     "react-autocomplete": "^1.8.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "react-infinite-scroll-component": "^4.3.0",
     "react-infinite-scroller": "^1.2.4",
     "react-obfuscate": "3.3.1",
+    "react-onclickoutside": "^6.8.0",
     "react-scripts": "2.1.3",
+    "react-select": "^3.0.3",
+    "react-tippy": "^1.2.3",
+    "react-toastify": "^5.3.2",
+    "styled-components": "^5.0.0-beta.8",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
@@ -26,7 +32,6 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "add-user": "node scripts/add-mentor.js",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
     "prettier:fix": "prettier \"**/*.{json,js}\" --write",
     "cy:run": "cypress run",
@@ -47,6 +52,7 @@
   ],
   "devDependencies": {
     "ajv": "^6.8.1",
+    "cors": "^2.8.5",
     "cypress": "^3.2.0",
     "cypress-testing-library": "^3.0.1",
     "execa": "^1.0.0",
@@ -54,7 +60,10 @@
     "image-type": "^4.0.0",
     "inquirer": "^6.2.2",
     "is-ci-cli": "^1.1.1",
+    "nock": "^10.0.6",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
     "object-path": "^0.11.4",
     "ora": "^3.2.0",
     "prettier": "1.18.2",
