Updated manifest to meet standards for PWA

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,10 +6,20 @@
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    }
+    }, 
+    {
+      "src": "codingcoach-logo-192.png", 
+      "type": "image/png", 
+      "sizes": "192x192"
+    }, 
+    {
+      "src": "codingcoach-logo-512.png", 
+      "type": "image/png", 
+      "sizes": "512x512"
+    },
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#16385c",
   "background_color": "#ffffff"
 }
