--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#16385c",
-  "background_color": "#ffffff"
+  "theme_color": "#20293a",
+  "background_color": "#20293a"
 }
