--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/browser": "^5.6.3",
     "auth0-js": "^9.11.3",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
