--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CodingCoach",
-  "name": "CodingCoach",
+  "short_name": "Mentors",
+  "name": "Mentors - CodingCoach",
   "icons": [
     {
       "src": "favicon.ico",
