--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-obfuscate": "^3.6.2",
     "react-onclickoutside": "^6.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.1",
     "react-select": "^3.0.4",
     "react-tippy": "^1.2.3",
