--- a/package.json
+++ b/package.json
@@ -55,8 +55,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.14",
     "@storybook/react": "^5.3.14",
     "@testing-library/cypress": "^4.1.1",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.5.0",
     "ajv": "^6.10.2",
     "cors": "^2.8.5",
     "cypress": "^3.4.1",
