--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.9.0",
     "react-infinite-scroll-component": "^4.5.3",
     "react-infinite-scroller": "^1.2.4",
+    "react-modal-hook": "^3.0.0",
     "react-obfuscate": "^3.6.2",
     "react-onclickoutside": "^6.9.0",
     "react-router-dom": "^5.1.2",
