--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@sentry/browser": "^5.6.3",
     "auth0-js": "^9.13.2",
     "classnames": "^2.2.6",
+    "country-list": "^2.2.0",
     "express": "^4.17.1",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
-    "iso-639-1": "^2.1.0",
+    "iso-639-1": "^2.1.3",
     "lodash": "^4.17.19",
     "react": "^16.9.0",
     "react-aria-offcanvas": "^1.3.4",
@@ -57,12 +58,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.4",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/react": "^5.3.18",
     "@testing-library/cypress": "^4.1.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
+    "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
     "ajv": "^6.10.2",
     "cors": "^2.8.5",
