--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.5",
     "@sentry/browser": "^5.6.3",
-    "auth0-js": "^9.13.2",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "inquirer-autocomplete-prompt": "^1.0.1",
