--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "deploy": "gh-pages -d build",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
     "prettier:fix": "prettier \"**/*.{json,js}\" --write",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
+    "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"cypress run\"",
+    "cy:open": "concurrently -kill-others --success first \"yarn storybook\" \"cypress open\"",
     "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
     "pretest:e2e:run": "yarn run build",
     "test:e2e:run": "start-server-and-test start http://localhost:3000 cy:run",
     "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open",
-    "storybook": "start-storybook",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -c .storybook -o build/sb"
   },
   "eslintConfig": {
@@ -69,6 +69,7 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
     "ajv": "^6.10.2",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "cypress": "^6.2.0",
     "execa": "^2.0.4",
