--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "iso-639-1": "^2.1.3",
     "lodash": "^4.17.19",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-aria-offcanvas": "^1.3.4",
     "react-autocomplete": "^1.8.1",
