--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@testing-library/cypress": "^4.1.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.3",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
     "ajv": "^6.10.2",
