--- a/package.json
+++ b/package.json
@@ -21,34 +21,37 @@
     "react-obfuscate": "^3.6.2",
     "react-onclickoutside": "^6.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.1.1",
+    "react-scripts": "^4.0.1",
     "react-select": "^3.0.4",
     "react-tippy": "^1.2.3",
     "react-toastify": "^5.3.2",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.0.0-beta.8",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "node scripts/pre-build.js && react-scripts build && yarn build-storybook",
-    "test": "yarn prettier:fix && react-scripts test && yarn test:e2e:run",
+    "build": "node scripts/pre-build.js && react-scripts build",
+    "test": "yarn react-scripts test && yarn test:e2e:run",
     "test:unit:update-snapshot": "react-scripts test -u",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
     "prettier:fix": "prettier \"**/*.{json,js}\" --write",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
+    "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"cypress run\"",
+    "cy:open": "concurrently -kill-others --success first \"yarn storybook\" \"cypress open\"",
     "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
-    "pretest:e2e:run": "yarn run build",
     "test:e2e:run": "start-server-and-test start http://localhost:3000 cy:run",
     "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open",
-    "storybook": "start-storybook",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -c .storybook -o build/sb"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "import/no-anonymous-default-export": "off"
+    }
   },
   "browserslist": [
     ">0.2%",
@@ -57,16 +60,19 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/react": "^5.3.18",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.11",
     "@testing-library/cypress": "^4.1.1",
     "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.3",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
     "ajv": "^6.10.2",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
-    "cypress": "^3.4.1",
+    "cypress": "^6.2.0",
     "execa": "^2.0.4",
     "gh-pages": "^2.1.1",
     "image-type": "^4.1.0",
@@ -82,5 +88,8 @@
     "prettier": "^1.18.2",
     "start-server-and-test": "^1.10.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "resolutions": {
+    "babel-loader": "8.1.0"
+  }
 }
