feat: mentorship request (#787)

--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "react-select": "^3.0.4",
     "react-tippy": "^1.2.3",
     "react-toastify": "^5.3.2",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.0.0-beta.8",
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "node scripts/pre-build.js && react-scripts build && yarn build-storybook",
-    "test": "yarn prettier:fix && react-scripts test && yarn test:e2e:run",
+    "build": "node scripts/pre-build.js && react-scripts build",
+    "test": "yarn test:unit && yarn test:e2e:run",
+    "test:unit": "react-scripts test",
     "test:unit:update-snapshot": "react-scripts test -u",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
@@ -42,7 +44,6 @@
     "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"cypress run\"",
     "cy:open": "concurrently -kill-others --success first \"yarn storybook\" \"cypress open\"",
     "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
-    "pretest:e2e:run": "yarn run build",
     "test:e2e:run": "start-server-and-test start http://localhost:3000 cy:run",
     "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open",
     "storybook": "start-storybook -p 6006",
@@ -66,7 +67,8 @@
     "@storybook/react": "^6.1.11",
     "@testing-library/cypress": "^4.1.1",
     "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.3",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
     "ajv": "^6.10.2",
