--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prettier:fix": "prettier \"**/*.{json,js}\" --write",
     "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"cypress run\"",
     "cy:open": "concurrently -kill-others --success first \"yarn storybook\" \"cypress open\"",
-    "cy:open:tests": "concurrently -kill-others --success first \"BROWSER=none yarn start | cypress open\" \"cypress open\"",
+    "cy:open:tests": "concurrently -kill-others --success first \"BROWSER=none yarn start\" \"cypress open\"",
     "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
     "test:e2e:run": "start-server-and-test start http://localhost:3000 cy:run",
     "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open",
@@ -67,7 +67,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
-    "@testing-library/cypress": "^4.1.1",
+    "@testing-library/cypress": "^7.0.6",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.3",
@@ -83,7 +83,7 @@
     "ajv": "^6.10.2",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
-    "cypress": "^6.2.0",
+    "cypress": "^7.6.0",
     "execa": "^2.0.4",
     "gh-pages": "^2.1.1",
     "image-type": "^4.1.0",
