--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "deploy": "gh-pages -d build",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
     "prettier:fix": "prettier \"**/*.{json,js}\" --write",
-    "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"cypress run\"",
+    "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"wait-on http://localhost:6006 && cypress run\"",
     "cy:open": "concurrently -kill-others --success first \"yarn storybook\" \"cypress open\"",
     "cy:open:tests": "concurrently -kill-others --success first \"BROWSER=none yarn start\" \"cypress open\"",
     "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
@@ -98,7 +98,8 @@
     "ora": "^3.4.0",
     "prettier": "^1.18.2",
     "start-server-and-test": "^1.10.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "wait-on": "^6.0.0"
   },
   "license": "MIT",
   "resolutions": {
