--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-aria-offcanvas": "^1.3.4",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.9.0",
+    "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^4.5.3",
     "react-infinite-scroller": "^1.2.4",
     "react-modal-hook": "^3.0.0",
@@ -77,6 +78,7 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-select": "^4.0.15",
     "@types/styled-components": "^5.1.0",
