--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@sentry/browser": "^5.6.3",
+    "@types/react-router": "^5.1.16",
     "auth0-js": "^9.13.2",
     "classnames": "^2.3.1",
     "express": "^4.17.1",
@@ -97,6 +98,7 @@
     "object-path": "^0.11.5",
     "ora": "^3.4.0",
     "prettier": "^1.18.2",
+    "react-router": "^5.2.0",
     "start-server-and-test": "^1.10.0",
     "typescript": "^4.3.2",
     "wait-on": "^6.0.0"
