--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
+    "prettier:fix:file": "prettier --write",
     "prettier:fix": "prettier \"**/*.{json,js}\" --write",
     "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"wait-on http://localhost:6006 && cypress run\"",
     "cy:open": "concurrently -kill-others --success first \"yarn storybook\" \"cypress open\"",
@@ -98,7 +99,7 @@
     "npm-run-all": "^4.1.5",
     "object-path": "^0.11.8",
     "ora": "^3.4.0",
-    "prettier": "^1.18.2",
+    "prettier": "^2.4.0",
     "start-server-and-test": "^1.10.0",
     "typescript": "^4.3.2",
     "wait-on": "^6.0.0"
