--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "ora": "^3.4.0",
     "prettier": "^1.18.2",
     "start-server-and-test": "^1.10.0",
+    "ts-node": "^10.3.0",
     "typescript": "^4.3.2",
     "wait-on": "^6.0.0"
   },
