--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
