--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13"
