--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 REACT_APP_API_ENDPOINT=https://api-staging.codingcoach.io
 REACT_APP_AUTH_DOMAIN=codingcoach.eu.auth0.com
 REACT_APP_AUTH_CLIENT_ID=v6QIkx65SRzIUN91JuTRQ0nC4t1veOLQ
-REACT_APP_AUTH_CALLBACK=http://localhost:3000/
+REACT_APP_AUTH_CALLBACK=http://localhost:3000
 REACT_APP_MAINTENANCE_MESSAGE=""
