--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@sentry/browser": "^5.6.3",
     "auth0-js": "^9.13.2",
+    "babel-plugin-styled-components": "^2.0.1",
     "classnames": "^2.3.1",
     "express": "^4.17.1",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "iso-639-1": "^2.1.3",
     "lodash": "^4.17.21",
+    "next": "^12.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-aria-offcanvas": "^1.3.4",
@@ -32,8 +34,9 @@
     "svg-country-flags": "^1.2.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "node scripts/pre-build.js && react-scripts build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "yarn test:unit && yarn test:e2e:run",
     "test:unit": "react-scripts test",
     "test:unit:update-snapshot": "react-scripts test -u",
