--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_AUTH_DOMAIN=codingcoach.eu.auth0.com
 NEXT_PUBLIC_AUTH_CLIENT_ID=IxICRc28Q2waSi00bUBp294pAt0RmcRa
 NEXT_PUBLIC_AUTH_CALLBACK=https://mentors.codingcoach.io
 NEXT_PUBLIC_EXPERIMENTS=newBackoffice
+NEXT_PUBLIC_PUBLIC_URL=https://mentors.codingcoach.io
