--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ NEXT_PUBLIC_AUTH_DOMAIN=codingcoach.eu.auth0.com
 NEXT_PUBLIC_AUTH_CLIENT_ID=v6QIkx65SRzIUN91JuTRQ0nC4t1veOLQ
 NEXT_PUBLIC_AUTH_CALLBACK=http://localhost:3000
 NEXT_PUBLIC_MAINTENANCE_MESSAGE=""
+NEXT_PUBLIC_PUBLIC_URL=http://localhost:3000
