use prebuild hook

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "dev": "next dev",
+    "prebuild": "yarn golden",
     "build": "next build",
     "start": "next start",
     "test": "yarn test:unit && yarn test:e2e:run",
