--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
   },
   "scripts": {
     "dev": "next dev",
+    "prebuild": "yarn golden",
     "build": "next build",
     "start": "next start",
     "test": "yarn test:unit && yarn test:e2e:run",
     "test:unit": "react-scripts test",
     "test:unit:update-snapshot": "react-scripts test -u",
-    "eject": "react-scripts eject",
+    "golden": "yarn prettier",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
