feat: handle sitemap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "downlevelIteration": true,
   },
   "include": [
     "src"
