--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.3",
+    "@types/auth0-js": "^9.14.6",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
