--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "iso-639-1": "^2.1.3",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "prop-types": "^15.7.2",
