--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.10.0",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
