--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "node": "18.x"
   },
   "dependencies": {
+    "@netlify/functions": "^2.0.0",
     "@sentry/browser": "^8.33.0",
+    "@sentry/node": "^7.0.0",
     "auth0-js": "^9.13.2",
     "babel-plugin-styled-components": "^2.0.1",
     "classnames": "^2.3.1",
@@ -14,7 +16,10 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "iso-639-1": "^2.1.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
+    "mongodb": "^6.14.2",
     "next": "^12.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -37,7 +42,7 @@
   "scripts": {
     "dev": "next dev",
     "prebuild": "yarn golden",
-    "build": "next build",
+    "build": "next build && tsc --project tsconfig.functions.json",
     "start": "next start",
     "test": "yarn test:unit && yarn test:e2e:run",
     "test:unit": "react-scripts test",
@@ -45,9 +50,9 @@
     "golden": "yarn prettier",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "prettier": "prettier \"**/*.{json,js}\" --check --loglevel log",
+    "prettier": "prettier \"**/*.{json,js,ts}\" --check --loglevel log",
     "prettier:fix:file": "prettier --write",
-    "prettier:fix": "prettier \"**/*.{json,js}\" --write",
+    "prettier:fix": "prettier \"**/*.{json,js,ts}\" --write",
     "cy:run": "concurrently -kill-others --success first \"yarn storybook\" \"wait-on http://localhost:6006 && cypress run\"",
     "cy:open": "concurrently -kill-others --success first \"yarn storybook\" \"cypress open\"",
     "cy:open:tests": "concurrently -kill-others --success first \"BROWSER=none yarn start\" \"cypress open\"",
@@ -79,9 +84,12 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.3",
+    "@types/auth0-js": "^9.14.7",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.14.170",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
@@ -98,6 +106,7 @@
     "inquirer": "^7.0.0",
     "is-ci-cli": "^1.1.1",
     "jest-styled-components": "^7.0.2",
+    "netlify-cli": "^17.0.0",
     "nock": "^13.1.3",
     "node-fetch": "^3.2.10",
     "nodemon": "^1.19.1",
