auth: verify token (by removing audience)
todo: see how to verify it with audience

--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "dependencies": {
     "@netlify/functions": "^2.0.0",
+    "@sendgrid/client": "^8.1.4",
+    "@sendgrid/mail": "^8.1.4",
     "@sentry/browser": "^8.33.0",
-    "@sentry/node": "^7.0.0",
+    "@sentry/node": "^9.6.0",
     "auth0-js": "^9.13.2",
+    "axios": "^1.8.3",
     "babel-plugin-styled-components": "^2.0.1",
     "classnames": "^2.3.1",
+    "ejs": "^3.1.10",
     "express": "^4.17.3",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
@@ -41,7 +45,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build && tsc --project tsconfig.functions.json",
+    "build": "next build",
     "start": "next start",
     "test": "yarn test:unit && yarn test:e2e:run",
     "test:unit": "react-scripts test",
