--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-toastify": "^5.3.2",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.0.0-beta.8",
-    "svg-country-flags": "^1.2.6"
+    "svg-country-flags": "^1.2.6",
+    "url-pattern": "^1.0.3"
   },
   "scripts": {
     "dev": "next dev",
