--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@testing-library/user-event": "^12.6.3",
     "@types/auth0-js": "^9.14.7",
     "@types/classnames": "^2.3.1",
+    "@types/ejs": "^3.1.5",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.14.170",
