--- a/package.json
+++ b/package.json
@@ -70,7 +70,18 @@
     "extends": "react-app",
     "rules": {
       "import/no-anonymous-default-export": "off",
-      "no-console": "warn"
+      "no-console": "warn",
+      "no-restricted-syntax": [
+        "error",
+        {
+          "selector": "CallExpression[callee.object.name='localStorage']",
+          "message": "Do not use `localStorage` directly, use the storage wrapper instead"
+        },
+        {
+          "selector": "CallExpression[callee.object.name='sessionStorage']",
+          "message": "Do not use `sessionStorage` directly, use the storage wrapper instead"
+        }
+      ]
     }
   },
   "browserslist": [
