--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
+    "marked": "^15.0.11",
     "mongodb": "^6.14.2",
     "next": "^12.1.0",
     "prop-types": "^15.7.2",
